--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,9 @@
      body,h1,h2,h3,h4,h5,h6,p,span,button{
         font-family: "Inter", sans-serif;
       }
+      main{
+        background: #f1f0f0;
+      }
   </style>
   </head>
   <body>
