--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,8 @@
         font-family: "Inter", sans-serif;
       }
       main{
-        background: #f1f0f0;
+        /* background: #f1f0f0; */
+        background: #e5e5e5e3;
       }
   </style>
   </head>
